fix: attachments overflow bug
closes #1952

--- a/packages/styles/src/styles/tailwindcss/thread.css
+++ b/packages/styles/src/styles/tailwindcss/thread.css
@@ -66,15 +66,17 @@
 .aui-composer-send {
   @apply my-2.5 size-8 p-2 transition-opacity ease-in;
 }
+
 .aui-composer-cancel {
   @apply my-2.5 size-8 p-2 transition-opacity ease-in;
 }
+
 .aui-composer-attach {
   @apply my-2.5 size-8 p-2 transition-opacity ease-in;
 }
 
 .aui-composer-attachments {
-  @apply flex w-full flex-row gap-3 px-10;
+  @apply flex w-full flex-row gap-3 overflow-y-auto;
 }
 
 /* attachment */
@@ -114,11 +116,11 @@
 /* user message */
 
 .aui-user-message-root {
-  @apply grid auto-rows-auto grid-cols-[minmax(72px,1fr)_auto] gap-y-2 [&:where(>*)]:col-start-2;
+  @apply grid auto-rows-auto grid-cols-[minmax(72px, 1fr)_auto] gap-y-2 [&:where(>*)]:col-start-2;
   @apply w-full max-w-[var(--thread-max-width)] py-4;
 }
 
-:where(.aui-user-message-root) > .aui-branch-picker-root {
+:where(.aui-user-message-root)>.aui-branch-picker-root {
   @apply col-span-full col-start-1 row-start-3;
   @apply -mr-1 justify-end;
 }
@@ -170,7 +172,7 @@
   @apply relative w-full max-w-[var(--thread-max-width)] py-4;
 }
 
-:where(.aui-assistant-message-root) > .aui-avatar-root {
+:where(.aui-assistant-message-root)>.aui-avatar-root {
   @apply col-start-1 row-span-full row-start-1 mr-4;
 }
 
@@ -178,7 +180,7 @@
   @apply col-start-1 row-span-full row-start-1 mr-4;
 }
 
-:where(.aui-assistant-message-root) > .aui-branch-picker-root {
+:where(.aui-assistant-message-root)>.aui-branch-picker-root {
   @apply col-start-2 row-start-2;
   @apply -ml-2 mr-2;
 }
@@ -246,7 +248,7 @@
   @apply data-[active]:bg-muted hover:bg-muted flex items-center justify-start gap-1 rounded-lg px-2.5 py-2 text-start;
 }
 
-.aui-thread-list-new > .lucide-plus {
+.aui-thread-list-new>.lucide-plus {
   @apply size-5;
 }
 
